# sample-python-libs

./: .gitignore  LICENSE  README.md  custom_events_notebook.ipynb  dev-requirements.txt  pyproject.toml
.github/workflows/: create-release.yml  create-tag-and-release.yml  create-tag.yml  python-publish-to-pypi.yml  python-publish.yml
docs/: wheel-generation.md
scripts/: get-wheel-GitHub-API.py
src/custom_events_lib/: context.py  custom_events.py  event_type.py  events_persistance_manager.py  notebook_context.py  utils.py
src/custom_exceptions_lib/: exceptions.py
