[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_exceptions_lib"
version = "0.0.6"
authors = [
    {name = "Magda Baran"},
]
description = "A sample package containing custom exceptions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/MagdaPaj/sample-python-libs"

