[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_python_libs"
version = "0.0.24"
authors = [
    {name = "Magda Baran"},
]
description = "A sample package containing custom exceptions to be reused across Spark notebooks"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/MagdaPaj/sample-python-libs"

